--- a/wp-content/themes/mehalsgmues/style.css
+++ b/wp-content/themes/mehalsgmues/style.css
@@ -521,9 +521,9 @@ h1 a:active, h2 a:active, h3 a:active, h4 a:active, h5 a:active, h6 a:active {
 	float: right;
 	align-self: center;
 	margin: 24px 0px;
-	border-left: 1px solid rgba(0, 0, 0, 0.12);
-	border-top: 1px solid rgba(0, 0, 0, 0.12);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+/* 	border-left: 1px solid rgba(0, 0, 0, 0.12); */
+/* 	border-top: 1px solid rgba(0, 0, 0, 0.12); */
+/* 	border-bottom: 1px solid rgba(0, 0, 0, 0.12); */
 	border-radius: 2px;
 }
 
@@ -547,7 +547,8 @@ button.menu-toggle {
 	position: relative;
 	line-height: 0;
 	margin: 0px;
-	padding: 24px;
+/* 	padding: 24px; */
+	padding: 12px 36px;
 	border: none;
 	z-index: 9;
 	cursor: pointer;
@@ -743,7 +744,7 @@ ul.menu li li a::after {
 .blog .content,
 .search .content,
 .archive .content {
-	padding: 0px;
+/* 	padding: 0px; */
 }
 .category .content,
 .showcase .content {
